# BlockChain_Example

./: chain.json  daniele.json  genesis.json  main.py  mario.json  my_test.py  pyproject.toml
