[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Daniele Prevedello <dprevedello86@gmail.com>"]
description = "Esempio di creazione di una blockchain in python"
name = "repl_BlockChain"
version = "0.1.0"
[tool.poetry.dependencies]
pycryptodome = "^3.10.4"
python = "^3.8"
ntplib = "^0.4.0"
[tool.poetry.dev-dependencies]
